--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     </div>
     <div id="decor">Введите логин</div>
     <div id="load" class="d-none"></div>
+    <script src="main.js"></script>
 </body>
 
 </html>
